[ios] Revert of History didReceiveQueryResult performBatchUpdates.

This reverts: https://codereview.chromium.org/2800473004/
Since it increased the crash rate as in bug 716349.

BUG=716349

Review-Url: https://codereview.chromium.org/2855883002
Cr-Commit-Position: refs/heads/master@{#468856}

Former-commit-id: 4575e0c18c3fea30e4f59ccc4c00fca6e6014698